// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthenticationService > should return a token session 1`] = `
{
  "id": "1234-1234",
  "name": "Foo Token",
  "roles": [],
  "token": "1234",
  "type": "token",
}
`;

exports[`AuthenticationService > should return a token session 2`] = `
[
  {
    "where": {
      "token": "1234",
    },
  },
]
`;

exports[`AuthenticationService > should return a token session 3`] = `
[
  {
    "where": {
      "id": {
        "in": [
          "1234",
          "12345",
        ],
      },
    },
  },
]
`;

exports[`AuthenticationService > should return a user session 1`] = `
{
  "createdAt": 2026-01-01T00:00:00.000Z,
  "expiresAt": undefined,
  "id": undefined,
  "impersonatedBy": undefined,
  "origin": "password",
  "placeholderEmail": false,
  "restricted": false,
  "roles": [],
  "token": "1234",
  "type": "user",
  "user": {
    "email": "test@example.com",
    "id": "12345",
  },
}
`;

exports[`AuthenticationService > should return a user session 2`] = `
[
  {
    "include": {
      "user": {
        "select": {
          "active": true,
          "address": true,
          "birthday": true,
          "createdAt": true,
          "email": true,
          "emailVerifiedAt": true,
          "firstName": true,
          "flair": true,
          "id": true,
          "lastLogin": true,
          "modifiedAt": true,
          "name": true,
          "note": true,
          "password": false,
          "paymentProviderCustomers": true,
          "pendingEmail": true,
          "pendingEmailAt": true,
          "pendingEmailTokenHash": false,
          "properties": true,
          "roleIDs": true,
          "totpEnabled": true,
          "totpExempt": true,
          "totpSecret": false,
          "userImageID": true,
        },
      },
    },
    "where": {
      "token": "1234",
    },
  },
]
`;

exports[`AuthenticationService > should return a user session 3`] = `
[
  {
    "where": {
      "id": {
        "in": undefined,
      },
    },
  },
]
`;

exports[`AuthenticationService > should return null if user can't be found 1`] = `
[
  {
    "include": {
      "user": {
        "select": {
          "active": true,
          "address": true,
          "birthday": true,
          "createdAt": true,
          "email": true,
          "emailVerifiedAt": true,
          "firstName": true,
          "flair": true,
          "id": true,
          "lastLogin": true,
          "modifiedAt": true,
          "name": true,
          "note": true,
          "password": false,
          "paymentProviderCustomers": true,
          "pendingEmail": true,
          "pendingEmailAt": true,
          "pendingEmailTokenHash": false,
          "properties": true,
          "roleIDs": true,
          "totpEnabled": true,
          "totpExempt": true,
          "totpSecret": false,
          "userImageID": true,
        },
      },
    },
    "where": {
      "token": "1234",
    },
  },
]
`;

exports[`AuthenticationService > should return null if user can't be found 2`] = `undefined`;
